--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,15 @@
 
 export(freeMem)
 export(hsplit)
+export(nMeans)
+importFrom(base,Map)
+importFrom(base,apply)
+importFrom(base,as.data.frame)
+importFrom(base,class)
+importFrom(base,lapply)
+importFrom(base,ls)
+importFrom(base,ncol)
+importFrom(base,rm)
+importFrom(base,seq)
+importFrom(base,setdiff)
+importFrom(base,stop)
